--- a/src/pages/[...locale]/activity.astro
+++ b/src/pages/[...locale]/activity.astro
@@ -44,6 +44,8 @@ const t = copy[locale];
                                     src={resolvePath(item.data.image)}
                                     alt={item.data.title}
                                     class="activity-image"
+                                    loading="lazy"
+                                    decoding="async"
                                 />
                             )}
                             <div class="card-date">
