--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,6 +18,7 @@ const locale = detectLocale(Astro.url.pathname);
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="google-site-verification" content="ejrd-ENNgl260dAfWOH2bNmD3wcVzH2Ml3JvHXtn-1I" />
 		<link
 			rel="icon"
 			type="image/svg+xml"
