--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,6 +19,16 @@ const locale = detectLocale(Astro.url.pathname);
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="google-site-verification" content="ejrd-ENNgl260dAfWOH2bNmD3wcVzH2Ml3JvHXtn-1I" />
+		
+		<!-- Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-978THDMJTH"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			gtag('config', 'G-978THDMJTH');
+		</script>
+		
 		<link
 			rel="icon"
 			type="image/svg+xml"
