--- a/src/pages/[...locale]/visit.astro
+++ b/src/pages/[...locale]/visit.astro
@@ -44,15 +44,15 @@ const copy = {
         title: "研究室見学",
         paragraphs: [
           "研究室見学にあたっては、坂田研究室の日常的なイベントである「研究会」や「輪読会」の見学を推奨しています。",
-          "研究会では、毎月1度、木曜日4限 (14:55-16:40) に開かれ、毎回10名ほどの学生が、研究の進捗を発表します。また、全学生が聴講しますので、終了後に学生室 (202) で学生の率直な話を聞いてみるのもお勧めです。",
+          "研究会では、毎月2度、火曜日2限 (10:25-11:10) に開かれ、毎回10名ほどの学生が、研究の進捗を発表します。また、全学生が聴講しますので、終了後に学生室 (202) で学生の率直な話を聞いてみるのもお勧めです。",
           "輪読会では、隔週 (研究会のない週) に開かれ、参加している各学生が簡単に読んだ論文を1人1本発表する「乱読」と、1人の担当学生が詳細に論文を発表する「精読」を行っています。分野の雰囲気や近年のトレンドを手軽に体感することができ、各学生の興味も知ることができお勧めです。",
         ],
         readingTitle: "現在開かれている輪読会",
         readingList: [
-          "Computational Social Science (計算社会科学; CSS) (水曜日2限)",
-          "Science of Science (金曜日2限)",
-          "Natural Language Processing (NLP) (木曜日3限)",
-          "Economics (水曜日5限)",
+          "Computational Social Science (計算社会科学; CSS) (火曜日3限)",
+          "Science of Science (水曜日2限)",
+          "Natural Language Processing (NLP) (月曜日3限)",
+          "Economics (月曜日2限)",
         ],
         formText: {
           intro: "見学を希望される方は",
@@ -98,10 +98,10 @@ const copy = {
         ],
         readingTitle: "Current Reading Groups",
         readingList: [
-          "Computational Social Science (Wed period 2)",
-          "Science of Science (Fri period 2)",
-          "Natural Language Processing (Thu period 3)",
-          "Economics (Wed period 5)",
+          "Computational Social Science (Tue period 3)",
+          "Science of Science (Wed period 2)",
+          "Natural Language Processing (Mon period 3)",
+          "Economics (Mon period 2)",
         ],
         formText: {
           intro: "If you'd like to visit, please contact us via",
