--- a/src/pages/[...locale]/environment.astro
+++ b/src/pages/[...locale]/environment.astro
@@ -128,8 +128,8 @@ const isJa = locale === "ja";
           研究室見学にあたっては、坂田研究室の日常的なイベントである「研究会」や「輪読会」の見学を推奨しています。
         </p>
         <p>
-          研究会では、毎月1度、木曜日4限 (14:55-16:40)
-          に開かれ、毎回10名ほどの学生が、研究の進捗を発表します。また、全学生が聴講しますので、終了後に学生室
+          研究会では、毎月2度、火曜日2限 (10:25-12:10)
+          に開かれ、毎回5名ほどの学生が、研究の進捗を発表します。また、全学生が聴講しますので、終了後に学生室
           (202) で学生の率直な話を聞いてみるのもお勧めです。
         </p>
         <p>
@@ -144,7 +144,7 @@ const isJa = locale === "ja";
           visiting the lab.
         </p>
         <p>
-          The seminar meets once a month on Thursdays (period 4, 14:55-16:40).
+          The seminar meets twice a month on Tuesdays (period 2, 10:25-12:10).
           Around ten students present their progress while all members attend,
           so you can chat with them afterward in Room 202.
         </p>
@@ -161,17 +161,17 @@ const isJa = locale === "ja";
     <ul>
       {isJa ? (
         <>
-          <li>Computational Social Science (計算社会科学; CSS) (水曜日2限)</li>
-          <li>Science of Science (金曜日2限)</li>
-          <li>Natural Language Processing (NLP) (木曜日3限)</li>
-          <li>Economics (水曜日5限)</li>
+          <li>Computational Social Science (計算社会科学; CSS) (火曜日3限)</li>
+          <li>Science of Science (水曜日2限)</li>
+          <li>Natural Language Processing (NLP) (月曜日3限)</li>
+          <li>Economics (月曜日2限)</li>
         </>
       ) : (
         <>
-          <li>Computational Social Science (Wed period 2)</li>
-          <li>Science of Science (Fri period 2)</li>
-          <li>Natural Language Processing (Thu period 3)</li>
-          <li>Economics (Wed period 5)</li>
+          <li>Computational Social Science (Tue period 3)</li>
+          <li>Science of Science (Wed period 2)</li>
+          <li>Natural Language Processing (Mon period 3)</li>
+          <li>Economics (Mon period 3)</li>
         </>
       )}
     </ul>
